Improving content and design

--- a/productising.html
+++ b/productising.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Productising a… ‘Service Design Consultancy’</title>
+    <title>Creating value from user insight</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/style.css">
@@ -17,7 +17,7 @@
 <body>
 
     <header role="banner">
-        <div class="container header text--align-center container--border">
+        <div class="container header text--align-center background--white">
             <div class="row clearfix">
                 <div class="column">
                     <img class="logo" src="img/site-logo-orange.png" alt="">
@@ -32,11 +32,11 @@
 
     <main class="content" role="main">
         <section>
-            <div class="container text--align-center container--border background--light-grey">
+            <div class="container text--align-center background--light-grey">
                 <div class="row clearfix">
-                    <div class="column column--large-padding">
-                        <h1 class="heading--xlarge margin-bottom--none">Productising a… <br />‘Service Design Consultancy’</h1>
-                        <p>We look at the big picture – to help companies across all industries deliver better products, systems and services through user-centric research, testing and digital solutions.</p>
+                    <div class="column column--medium-padding">
+                        <h1 class="heading--xlarge margin-bottom--none">Creating value from user insight</h1>
+                        <p class="font-width--half">We look at the big picture – to help companies across all industries deliver better products, systems and services through user-centric research, testing and digital solutions.</p>
                     </div>
                     <!-- End of column -->
                 </div>
@@ -46,70 +46,70 @@
         </section>
 
         <section>
-            <div class="container container--border">
-              <div class="row clearfix">
-                  <div class="column column--no-padding column--half">
-                      <img src="img/post-its.jpg" alt="">
-                  </div>
-                  <!-- End of column -->
-                  <div class="column square column--half background--dark-grey">
-                    <div class="square__content">
-                      <h2 class="font-color--white">Digital Solutions</h2>
-                      <ul class="font-color--white">
-                        <li>User Interface Design &amp; Interactive Media</li>
-                        <li>Inteligent Systems &amp; Software Development</li>
-                        <li>Data Management Dashboards &amp; Monitoring Systems</li>
-                        <li>Digital Workflow Management Systems</li>
-                        <li>Mobile/Device Applications &amp; Web Development</li>
-                        <li>Intrumentation &amp; Digital Tool Creation</li>
-                        <li>Intrumentation Systems &amp; Heads-Up Displays</li>
-                        <li>Automation &amp; Control Systems</li>
-                        <li>Concept Design, Pilots &amp; Digital Prototyping</li>
-                        <li>3D Similation Modelling</li>
-                      </ul>
+            <div class="container">
+                <div class="row clearfix">
+                    <div class="column column--no-padding column--half">
+                        <img src="img/post-its.jpg" alt="">
                     </div>
-                    <!-- End of column square content -->
-                  </div>
-                  <!-- End of column -->
-              </div>
-              <!-- End of row -->
+                    <!-- End of column -->
+                    <div class="column square column--half background--dark-grey">
+                        <div class="square__content">
+                            <h2 class="font-color--white">Digital Solutions</h2>
+                            <ul class="font-color--white">
+                                <li>User Interface Design &amp; Interactive Media</li>
+                                <li>Inteligent Systems &amp; Software Development</li>
+                                <li>Data Management Dashboards &amp; Monitoring Systems</li>
+                                <li>Digital Workflow Management Systems</li>
+                                <li>Mobile/Device Applications &amp; Web Development</li>
+                                <li>Intrumentation &amp; Digital Tool Creation</li>
+                                <li>Internal Systems &amp; Heads-Up Displays</li>
+                                <li>Automation &amp; Control Systems</li>
+                                <li>Concept Design, Pilots &amp; Digital Prototyping</li>
+                                <li>3D Similation Modelling</li>
+                            </ul>
+                        </div>
+                        <!-- End of column square content -->
+                    </div>
+                    <!-- End of column -->
+                </div>
+                <!-- End of row -->
                 <div class="row clearfix">
                     <div class="column square column--quarter background--turquoise">
-                      <div class="square__content">
-                        <h2 class="heading--medium font-color--dark-grey">Research, Testing &amp; Validation</h2>
-                        <ul class="font-color--dark-grey">
-                          <li>User Experience Research</li>
-                          <li>Usability Research &amp; Testing</li>
-                          <li>Focus Group Studies</li>
-                          <li>Idea Generation &amp; Validation</li>
-                        </ul>
-                      </div>
-                      <!-- End of column square content -->
+                        <div class="square__content">
+                            <h2 class="heading--medium font-color--dark-grey">Research, Testing &amp; Validation</h2>
+                            <ul class="font-color--dark-grey">
+                                <li>User Experience Research</li>
+                                <li>Usability Research &amp; Testing</li>
+                                <li>Focus Group Studies</li>
+                                <li>Idea Generation &amp; Validation</li>
+                            </ul>
+                        </div>
+                        <!-- End of column square content -->
                     </div>
                     <!-- End of column -->
                     <div class="column square column--quarter background--yellow">
-                      <div class="square__content">
-                        <h2 class="heading--medium font-color--dark-grey">Growth Support</h2>
-                        <ul class="font-color--dark-grey">
-                          <li>Business Change Plans</li>
-                          <li>Business/Workflow Design</li>
-                          <li>Innovation Planning</li>
-                        </ul>
-                      </div>
-                      <!-- End of column square content -->
+                        <div class="square__content">
+                            <h2 class="heading--medium font-color--dark-grey">Growth Support</h2>
+                            <ul class="font-color--dark-grey">
+                                <li>Business Change Plans</li>
+                                <li>Business/Workflow Design</li>
+                                <li>Innovation Planning</li>
+                            </ul>
+                        </div>
+                        <!-- End of column square content -->
                     </div>
                     <!-- End of column -->
                     <div class="column square column--quarter background--blue">
-                      <div class="square__content">
-                        <h2 class="heading--medium font-color--white">Training Workshops</h2>
-                        <ul class="font-color--white">
-                          <li>Research Methodologies</li>
-                          <li>Client Insight Analysis</li>
-                          <li>Conducting Focus Groups</li>
-                          <li>Pilot Study Planning</li>
-                        </ul>
-                      </div>
-                      <!-- End of column square content -->
+                        <div class="square__content">
+                            <h2 class="heading--medium font-color--white">Training Workshops</h2>
+                            <ul class="font-color--white">
+                                <li>Research Methodologies</li>
+                                <li>Client Insight Analysis</li>
+                                <li>Conducting Focus Groups</li>
+                                <li>Pilot Study Planning</li>
+                            </ul>
+                        </div>
+                        <!-- End of column square content -->
                     </div>
                     <!-- End of column -->
                     <div class="column column--no-padding column--quarter">
@@ -121,10 +121,23 @@
             </div>
             <!-- End of container -->
         </section>
+
+        <section>
+            <div class="container text--align-center background--light-grey">
+                <div class="row clearfix">
+                    <div class="column column--medium-padding">
+                        <p class="font-size--medium"><a href="#">Visit our full website</a></p>
+                    </div>
+                    <!-- End of column -->
+                </div>
+                <!-- End of row -->
+            </div>
+            <!-- End of container -->
+        </section>
     </main>
 
     <footer role="contentinfo">
-        <div class="container footer text--align-center">
+        <div class="container footer text--align-center background--white">
             <div class="row clearfix">
                 <div class="column">
                     <p>© 2016</p>
