--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="row clearfix">
                     <div class="column">
                         <h1 class="heading--xxlarge margin-bottom--none">Leadin Brand Book (Alpha)</h1>
-                        <p>A brand book and front-end style guide for Leadin. This is a work in progress</p>
+                        <p>A brand book and front-end style guide for Leadin. This is a work in progress.</p>
                         <p><a href="files/leadin_brand_book_official.pdf">Download Leadin Brand Book (PDF, 1.8MB)</a></p>
                     </div>
                     <!-- End of column -->
