Added contact block

--- a/productising.html
+++ b/productising.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/normalize.css">
 
     <!-- Get font from Google Fonts. You probably won’t need all these weights for production. -->
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900italic,900,700italic,700,600italic,600,400italic,300italic,300,200italic,200' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900italic,900,700italic,700,600italic,600,400italic,300italic,300,200italic,200" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -54,7 +54,7 @@
                     <!-- End of column -->
                     <div class="column square column--half background--dark-grey">
                         <div class="square__content">
-                            <h2 class="font-color--white">Digital Solutions</h2>
+                            <h2 class="font-color--white heading--large">Digital Solutions</h2>
                             <ul class="font-color--white">
                                 <li>User Interface Design &amp; Interactive Media</li>
                                 <li>Inteligent Systems &amp; Software Development</li>
@@ -118,14 +118,18 @@
                     <!-- End of column -->
                 </div>
                 <!-- End of row -->
-            </div>
-            <!-- End of container -->
-        </section>
-
-        <section>
-            <div class="container text--align-center background--light-grey">
                 <div class="row clearfix">
-                    <div class="column column--medium-padding">
+                    <div class="column column--large-padding text--align-center background--white">
+                      <h2 class="heading--xlarge font-color--orange">How can we help you?</h2>
+                        <h3 class="margin-bottom--none">Harri Mansikkamäki</h3>
+                        <p class="margin-top--none margin-bottom--none">Head of Leadin UK</p>
+                        <p class="margin-top--none">+44 7982 816 253</p>
+                    </div>
+                    <!-- End of column -->
+                </div>
+                <!-- End of row -->
+                <div class="row clearfix">
+                    <div class="column column--medium-padding text--align-center background--light-grey">
                         <p class="font-size--medium"><a href="http://leadin.fi/">Visit our full website</a></p>
                     </div>
                     <!-- End of column -->
@@ -134,10 +138,11 @@
             </div>
             <!-- End of container -->
         </section>
+
     </main>
 
     <footer role="contentinfo">
-        <div class="container footer text--align-center background--white">
+        <div class="container footer text--align-center">
             <div class="row clearfix">
                 <div class="column">
                     <p>© 2016</p>
