Adding Lee’s photo

--- a/productising.html
+++ b/productising.html
@@ -120,22 +120,16 @@
                 <!-- End of row -->
                 <div class="row clearfix">
                     <div class="column column--large-padding text--align-center background--white">
-                      <h2 class="heading--xlarge font-color--orange">How can we help you?</h2>
-                        <h3 class="margin-bottom--none">Harri Mansikkamäki</h3>
-                        <p class="margin-top--none margin-bottom--none">Head of Leadin UK</p>
-                        <p class="margin-top--none">+44 7982 816 253</p>
-                    </div>
-                    <!-- End of column -->
-                </div>
-                <!-- End of row -->
-                <div class="row clearfix">
-                    <div class="column column--medium-padding text--align-center background--light-grey">
+                        <h2 class="heading--xlarge font-color--orange">How can we help you?</h2>
+                        <img class="contact" src="img/lee-d.png" alt="">
+                        <h3 class="heading--medium margin-bottom--none">Lee Davies</h3>
+                        <p class="margin-top--none margin-bottom--none ">Service Design Consultant</p>
+                        <p class="margin-top--none">+44 7854 762 286</p>
                         <p class="font-size--medium"><a href="http://leadin.fi/">Visit our full website</a></p>
                     </div>
                     <!-- End of column -->
                 </div>
                 <!-- End of row -->
-            </div>
             <!-- End of container -->
         </section>
 
@@ -145,7 +139,7 @@
         <div class="container footer text--align-center">
             <div class="row clearfix">
                 <div class="column">
-                    <p>© 2016</p>
+                    <p>© Leadin 2016</p>
                 </div>
                 <!-- End of column -->
             </div>
