Fixing brand pages

--- a/index.html
+++ b/index.html
@@ -11,39 +11,28 @@
     <link rel="stylesheet" href="css/normalize.css">
 
     <!-- Get font from Google Fonts. You probably won’t need all these weights for production. -->
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900italic,900,700italic,700,600italic,600,400italic,300italic,300,200italic,200' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900italic,900,700italic,700,600italic,600,400italic,300italic,300,200italic,200" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-    <header role="banner">
-        <div class="container header container--border">
-            <div class="row clearfix">
-                <div class="column--small column__half--small">
-                    <img class="logo" src="img/site-logo-orange.png" alt="">
-                    <p class="visuallyhidden">Leadin</p>
-                </div>
-                <div class="column--small column__half--small text--align-right">
-                      <!-- <i class="icon icon__twitter-dark-grey">
-                        <span class="visuallyhidden">Twitter</span>
-                      </i>
-                    <i class="icon icon__linkedin-dark-grey">
-                      <span class="visuallyhidden">Linkedin</span>
-                    </i>
-                  <i class="icon icon__facebook-dark-grey">
-                    <span class="visuallyhidden">Facebook</span>
-                  </i> -->
-                </div>
-                <!-- End of column -->
-            </div>
-            <!-- End of row -->
-        </div>
-        <!-- End of container -->
-    </header>
+  <header role="banner">
+      <div class="container header text--align-center background--white">
+          <div class="row clearfix">
+              <div class="column">
+                  <img class="logo" src="img/site-logo-orange.png" alt="">
+                  <p class="visuallyhidden">Leadin</p>
+              </div>
+              <!-- End of column -->
+          </div>
+          <!-- End of row -->
+      </div>
+      <!-- End of container -->
+  </header>
 
     <main class="content" role="main">
         <section>
-            <div class="container text--align-center container--border">
+            <div class="container text--align-center background--white container--border">
                 <div class="row clearfix">
                     <div class="column">
                         <h1 class="heading--xxlarge margin-bottom--none">Leadin Brand Book (Alpha)</h1>
@@ -57,7 +46,7 @@
             <!-- End of container -->
         </section>
         <section>
-            <div class="container container--border">
+            <div class="container background--white container--border">
                 <div class="row clearfix">
                     <div class="column">
                         <h2 id="logo" class="heading--large">Logo</h2>
@@ -100,7 +89,7 @@
             <!-- End of container -->
         </section>
         <section>
-            <div class="container container--border">
+            <div class="container background--white container--border">
                 <div class="row clearfix">
                     <div class="column">
                         <h2 id="typography" class="heading--large">Typography</h2>
@@ -196,7 +185,7 @@
             <!-- End of container -->
         </section>
         <section>
-            <div class="container container--border">
+            <div class="container background--white container--border">
                 <div class="row clearfix">
                     <div class="column">
                         <h2 id="colours" class="heading--large">Colours</h2>
@@ -322,7 +311,7 @@
             <!-- End of container -->
         </section>
         <section>
-            <div class="container">
+            <div class="container background--white">
                 <div class="row clearfix">
                     <div class="column">
                         <h2 id="images" class="heading--large">Images</h2>
@@ -370,19 +359,20 @@
             </div>
             <!-- End of container -->
         </section>
-    </main>
-    <footer role="contentinfo">
-        <div class="container footer text--align-center">
-            <div class="row clearfix">
-                <div class="column">
-                    <p>© 2016</p>
-                </div>
-                <!-- End of column -->
-            </div>
-            <!-- End of row -->
-        </div>
-        <!-- End of container -->
-    </footer>
-</body>
+      </main>
 
-</html>
+      <footer role="contentinfo">
+          <div class="container footer text--align-center">
+              <div class="row clearfix">
+                  <div class="column">
+                      <p>© Leadin 2016</p>
+                  </div>
+                  <!-- End of column -->
+              </div>
+              <!-- End of row -->
+          </div>
+          <!-- End of container -->
+      </footer>
+  </body>
+
+  </html>
