--- a/productising.html
+++ b/productising.html
@@ -48,9 +48,9 @@
         <section>
             <div class="container">
                 <div class="row clearfix">
-                    <div class="column column--no-padding column--half">
-                        <img src="img/post-its.jpg" alt="">
-                    </div>
+                  <div class="column column--half column--no-padding background--blue">
+                      <img src="img/case-ensto-01.jpg" alt="Dashboard design on a laptop">
+                  </div>
                     <!-- End of column -->
                     <div class="column square column--half background--dark-grey">
                         <div class="square__content">
@@ -100,7 +100,7 @@
                     </div>
                     <!-- End of column -->
                     <div class="column square column--quarter background--blue">
-                        <div class="square__content">
+                        <div class="square__content square__content--centered">
                             <h2 class="heading--medium font-color--white">Training Workshops</h2>
                             <ul class="font-color--white">
                                 <li>Research Methodologies</li>
@@ -112,8 +112,8 @@
                         <!-- End of column square content -->
                     </div>
                     <!-- End of column -->
-                    <div class="column column--no-padding column--quarter">
-                        <img src="img/smiling.jpg" alt="">
+                    <div class="column column--quarter column--no-padding background--medium-grey">
+                        <img src="img/case-ensto-01.jpg" alt="Dashboard design on a laptop">
                     </div>
                     <!-- End of column -->
                 </div>
